--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="s2_example2 (1).css">
-    <title>Házassági és válási adatvizualizáció Európa és Románia tekintetében</title>
+    <title> Románia házasodási és válási trendjeinek vizualizációja</title>
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
@@ -12,20 +12,20 @@
 
 <body>
     <h1 class="big" style="margin-bottom: 0px;">
-        Házassági és válási adatvizualizáció
+        Románia házasodási és válási trendjeinek vizualizációja
     </h1>
     <p style="margin-top: 0px; color: darkblue">
-        Your Name | <a href="https://www.linkedin.com/in/finnmcevoy/">LinkedIn</a> | <a href="https://www.github.com/FM-ds">GitHub</a>
+        Benedek Réka |  <a href="https://github.com/BenedekReka">GitHub</a>
     </p>
     <h3 class="small">
-        Ez a weboldal a házassági és válási adatokat vizualizálja Románia szinten, a vizsgált időszak 1990-2022-ig terjed.
+        Ez a weboldal a házassági és válási adatokat vizualizálja Románia szinten, a vizsgált időszak 1990-2022-ig terjed. A vizualizációk által megismerhetjük a nemek átlagéletkorát az eslő házasság idején, a házasságban töltött évek trendjét, a házasságok és válások számát megyénként, illetve ezen számok közvetlen befolyásoló tényezőjét, az elvándorlást, szintén minden megyére és a fővárosra.
     </h3>
 
     <section>
         <div class="chart-description">
             <h2>Nemek átlagéletkora az első házasság idején: 1996-2022</h2>
             <p>
-                Az ábrán láthatjuk, hogy mindkét nem átlagéletkora konstans növekedést mutatott a vizsdált időszakban.
+                Az ábrán láthatjuk, hogy mindkét nem átlagéletkora a házasság idején konstans növekedést mutatott a vizsgált időszakban. 1996-ban az első házasság idején az átlagéletkor 30 év volt, ez 2022-re 36 évre emelkedett a férfiak esetén, a nők esetén 27 és 33 év. Azt is megfigyeljetjük, hogy a két nem első házasság előtti átlagéletkora követte egymást.
             </p>
         </div>
         <figure id="Location1"></figure>
@@ -33,10 +33,9 @@
 
     <section>
         <div class="chart-description">
-            <h2>Elvált személyek száma korcsoportok szerint: 1990-2022</h2>
+            <h2>Házasságban töltött évek száma: 1990-2022</h2>
             <p>
-                This is a more advanced chart. We'll cover charts like this in more detail later today. Don't worry if you don't understand it yet.
-                Feel free to replace both charts with your own examples.
+                Ezen ábra azt mutaja meg, hogy a házas személyek hány évig voltak házasok: kevesebb, mint egy év, egy év, 20 évnél több, stb. Láthatjuk, hogy a 90-es évektől kezdődően a legnagyobb arányt az 5-9 éves házasságok tették ki, 2016-tól megfordult  trend és a 20 évnél nagyobb élettartamú házasságok kerültek többségbe. Ugyanakkor érdemes látni azt is, hogy a házasságok száma ezzel egyidőben csökkent.
             </p>
         </div>
         <figure id="Location2"></figure>
@@ -44,21 +43,9 @@
 
     <section>
         <div class="chart-description">
-            <h2>Section 3: Another Chart</h2>
+            <h2>Házasságok száma Romániában megyénként: 1990-2022</h2>
             <p>
-                This is a more advanced chart. We'll cover charts like this in more detail later today. Don't worry if you don't understand it yet.
-                Feel free to replace both charts with your own examples.
-            </p>
-        </div>
-        <figure id="Location3"></figure>
-    </section>
-
-    <section>
-        <div class="chart-description">
-            <h2>Section 4: Another Chart</h2>
-            <p>
-                This is a more advanced chart. We'll cover charts like this in more detail later today. Don't worry if you don't understand it yet.
-                Feel free to replace both charts with your own examples.
+                Az ábra a házasságkötések számát mutatja, az adott évben. Az éveket figyelve láthatjuk, hogy a 1990-től a kétezres évek elejéig lassú csökkenést mutatott a házasságok száma, ez a folyamat felgyorsult a vizsgált periódus második időszakában.
             </p>
         </div>
         <figure id="Location4"></figure>
@@ -66,9 +53,21 @@
 
     <section>
         <div class="chart-description">
-            <h2>Section 5: Flourish Visualization</h2>
+            <h2>Romániában elvált személyek száma megyénként: 1990-2022</h2>
             <p>
-                This is a Flourish visualization embedded directly into the webpage.
+                Ez egy interaktív ábra, amely az elvált személyek számát mutatja meg minden romániai megyében, minden évre a vizsgált perióduson belül. A válások számát tekintve nem tudjuk ugyanazt a trendet felfedezni, mint a házasságok esetén, például Brassó megyét nézve 1990-ben a házasságok száma 1100, 2005-ben 1075 és 2022-ben 996, ugyanakkor a házasságok száma ugyanezekben a periódusokban csökkent, ami azt jelenti, hogy a válások aránya növekedett.
+            </p>
+        </div>
+        <figure id="Location3"></figure>
+    </section>
+
+    
+
+    <section>
+        <div class="chart-description">
+            <h2>Romániából elvándorolt személyek száma megyénként: 1990-2022</h2>
+            <p>
+                Az utolsó ábra az elvándorolt személyek számát mutatja megyénként és összesen minden évre. Fontos látnunk, hogy a házasságok és válások számát nagyban befolyásolja az emigrálás. A vizualizációt nézve megfigyelhetjük, hogy 1990-től a kétezres évek elejéig magas volt a kivándorolt személyek száma, majd 2000-től egész 2012-ig jelentősen csökkent az országot elhagyók száma, majd ismét növekedésnek indult. Összehasonlítva a házasságok számát az emigráltak számával észrevehetjük, hogy azok ellentétes irányba mozognak, tehát ha nőtt az országot elhagyók száma, akkor a házasságok száma csökkent, ugyanígy a válások esetén is. Azonabn fontos látnunk, hogy a házasságok számát a népességi adatokon túl más tényezők is befolyásolják, ezen más tényezők hatását főként a kétezres évek közepétől lehet nyomon érni.
             </p>
         </div>
         <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/18406695">
@@ -86,8 +85,6 @@
         vegaEmbed('#Location2', figure_2_spec);
         vegaEmbed('#Location3', figure_3_spec);
         vegaEmbed('#Location4', figure_4_spec);
-
-        // Removed vegaEmbed for Location5, as Flourish embed is used instead
     </script>
 </body>
 
